chore: Update ESLint configuration to include TypeScript files and remove unused import in level.util.ts

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
 	"extends": "@maxencebonamy",
 	"ignorePatterns": [
 		"scripts/**/**.js",
+		"scripts/**/**.ts",
 		"src/lib/components/shadcnui/**/**.ts",
 		"src/lib/components/shadcnui/**/**.tsx",
 		"postcss.config.js",
